k8s/applications/web/kiwix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiwix
  namespace: kiwix
  labels:
    app.kubernetes.io/name: kiwix
spec:
  selector:
    app.kubernetes.io/name: kiwix
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
